test/compflags/ferguson/default-type-prints-generic.chpl
proc error(a, b, c, d, e, f) {
  var x: int;
  x = 20.0;
}

error(1, 1:uint, true, 1.0, 1.0i, 1.0+2.0i);
